--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-credal1.sql
-credal.sql
-credal1.zip
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+.env
